--- a/tests/hpc/changelog
+++ b/tests/hpc/changelog
@@ -1,6 +1,10 @@
 # Changelog
 All notable changes to this project will be documented in this file
 
+## [1.0.8] - 2019-09-27
+## Added
+Add basic migration tests for HPC; migration between SP versions of OS
+
 ## [1.0.7] - 2019-09-23
 ### Added
 Add more complex accounting test under slurm_master_db - test07
