--- a/tests/hpc/changelog
+++ b/tests/hpc/changelog
@@ -1,8 +1,15 @@
 # Changelog
 All notable changes to this project will be documented in this file
 
+## [1.0.9] - 2019-10-01
+### Added
+HPC cluster zypper online migration tests
+### Changed
+HPC migration tests got barriers, so that they could be run on a
+multimachine set-up
+
 ## [1.0.8] - 2019-09-27
-## Added
+### Added
 Add basic migration tests for HPC; migration between SP versions of OS
 
 ## [1.0.7] - 2019-09-23
