--- a/tests/hpc/changelog
+++ b/tests/hpc/changelog
@@ -1,6 +1,11 @@
 # Changelog
 All notable changes to this project will be documented in this file
 
+## [1.0.14] - 2019-10-24
+### Added
+New slurm configuration for the cluster with only accounting in the db
+enabled
+
 ## [1.0.13] - 2019-10-17
 ### Added
 Add some simple checks for HPC migration tests
